data/derived/fa15/progs/unify/prog1960.ml.out
Characters 67-80:
  | false -> (digitsOfInt n / 10) @ n mod 10;;
              ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
